# AtonixAgro

./: .env  .gitignore  CMakeLists.txt  main.cpp  openai.yml  package-lock.json  package.json  platformio.ini  requirements.txt
.github/workflows/: c-cpp.yml  openai.yml
Atoagr_sketch_sep20a/: Atoagr_sketch_sep20a.ino  ReadMe.adoc  http_client.h  irrigation_system.h  main.py  mqtt_client.h  robotic_arm.h  thingProperties.h
Atoagr_sketch_sep20a/config/: arduino_oauthlib_config.py  edge_impulse_inference.py
data/: data_process.ipynb  data_processing.py
data/.ipynb_checkpoints/: data_process-checkpoint.ipynb
env/: pyvenv.cfg
include/sensors/: soil_moisture_sensor.h  temperature_sensor.h
include/utils/: mqtt_client.h
noderedish/: package.json
scripts/: i2c_communication.py  mqtt_communication.py  openai_script.py  serial_communication.py
scripts/public/: index.html
src/: Atoagr_sketch_sep20a.cpp  irrigation_system.cpp  irrigation_system.h  main.cpp  mqtt_client.cpp  robotic_arm.cpp
src/actuators/: irrigation_system.cpp
src/sensors/: soil_moisture_sensor.cpp  temperature_sensor.cpp
src/utils/: mqtt_client.cpp
test/: test_main.cpp
utils/: http_client.cpp
webapplication/: app.py
