cmake_minimum_required(VERSION 3.10)
project(AtonixAgro)

# Specify the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Include directories (if any)
# include_directories(include)

# Add the executable
add_executable(AtonixAgro main.cpp)

# Link the libraries
# target_link_libraries(AtonixAgro libname)
```

